--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="subscribe.php">
-				<input type="email" name="email" id="email" placeholder="Email Address" />
+			<form id="signup-form" method="POST" action="subscribe.php">
+				<input type="Email" name="Email" id="Email" placeholder="Email Address" />
 				<input type="submit" value="Sign Up" />
 			</form>
 
