--- a/profile.html
+++ b/profile.html
@@ -65,7 +65,7 @@
 <!-- clients -->
     <section id="clients" class="clients">
         <aside class="call-to-action bg-primary">
-		
+		<div class="container">
 		<div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
                  
@@ -78,7 +78,7 @@
                 <!-- /.col-lg-10 -->
             </div>
 		</div>
-		
+		</div>
 		
 		
     </section>
