--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -80,7 +81,7 @@
     <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
     <section id="services" class="services bg-primary">
         <div class="container">
-            
+            <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
                     <h2>What we do</h2>
                     <hr class="small">
@@ -121,7 +122,7 @@
                 <!-- /.col-lg-10 -->
             </div>
             <!-- /.row -->
-     
+        </div>
         <!-- /.container -->
     </section>
  <!-- About -->
