--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                 <a href="profile.html" onclick = $("#menu-close").click(); >Company profile</a>
             </li>
 			<li>
-                <a href="contacts.html" onclick = $("#menu-close").click(); >More contact details</a>
+                <a href="contact.html" onclick = $("#menu-close").click(); >More contact details</a>
             </li>
         </ul>
     </nav>
@@ -65,7 +65,7 @@
 <!-- clients -->
     <section id="clients" class="clients">
         <aside class="call-to-action bg-primary">
-		
+		<div class="container">
 		<div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
                  
@@ -78,7 +78,7 @@
                 <!-- /.col-lg-10 -->
             </div>
 		</div>
-		
+		</div>
 		
 		
     </section>
