--- a/profile.html
+++ b/profile.html
@@ -89,16 +89,16 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     
                     <hr class="small">
-                    <div class="row">
+                    <div class="row" style="padding-left:5%; padding-right:5%;">
                         <p style="color:#000; font-size:150%; text-align:left;" >Bridge Engineering Services Ltd was established in 1988 by Jim and Gerry O’Neill, having previously worked for 15 years in the family steel fabrication business. Jim and Gerry who have each 40 years experience in the industry, have been joined in the company in recent years by Gerry’s son Gearoid, providing a third generation of the family in the steel business.</p>
 
-<p style="color:#000; font-size:150%; text-align:left;">Since its inception the company has steadily grown and has successfully completed a wide range of high quality projects in construction and industry. The extensive knowledge and experience of the directors, staff and draughting office has enabled the company to deliver construction projects with the complete assurance of cost, quality and on-time delivery.</p>
+					   	<p style="color:#000; font-size:150%; text-align:left;">Since its inception the company has steadily grown and has successfully completed a wide range of high quality projects in construction and industry. The extensive knowledge and experience of the directors, staff and draughting office has enabled the company to deliver construction projects with the complete assurance of cost, quality and on-time delivery.</p>
 
-<p style="color:#000; font-size:150%; text-align:left;">We are committed to fabricating, delivering and erecting top quality structural and secondary steelwork for our clients and customers. Our working practices ensure that projects and contracts are carefully managed and monitored throughout all stages of design, manufacture and erection, whilst keeping our clients clearly informed throughout each phase.</p>
+						<p style="color:#000; font-size:150%; text-align:left;">We are committed to fabricating, delivering and erecting top quality structural and secondary steelwork for our clients and customers. Our working practices ensure that projects and contracts are carefully managed and monitored throughout all stages of design, manufacture and erection, whilst keeping our clients clearly informed throughout each phase.</p>
 
-<p style="color:#000; font-size:150%; text-align:left;">The company has experience working across a number of sectors including construction, pharmaceutical (including cleanroom environments), electricity power stations, cement factories, oil refineries etc…</p>
+						<p style="color:#000; font-size:150%; text-align:left;">The company has experience working across a number of sectors including construction, pharmaceutical (including cleanroom environments), electricity power stations, cement factories, oil refineries etc…</p>
 
-<p style="color:#000; font-size:150%; text-align:left;">Bridge Engineering Services Ltd has a strong team of talented fabricators and experienced erectors with high standards for safety and performance. Whether the project is simple or complex, the team can meet the demands of any size project. Our list of projects and clients speaks volumes for our record.</p>
+						<p style="color:#000; font-size:150%; text-align:left;">Bridge Engineering Services Ltd has a strong team of talented fabricators and experienced erectors with high standards for safety and performance. Whether the project is simple or complex, the team can meet the demands of any size project. Our list of projects and clients speaks volumes for our record.</p>
                     </div>
                     <!-- /.row (nested) -->
                
