--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand">
-                <a href="#top"  onclick = $("#menu-close").click(); >Intro</a>
-            </li>
+           
             <li>
                 <a href="#top" onclick = $("#menu-close").click(); >Home</a>
             </li>
@@ -69,7 +67,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <img src="img/logo.png" alt="logo" />
+            <img src="img/logo3.png" alt="logo" style="width:300px;"/>
             <h3>Quality Welding and steel specialists</h3>
             <br>
             <a href="#services" class="btn btn-dark btn-lg">Find Out More</a>
