--- a/index.html
+++ b/index.html
@@ -3,41 +3,90 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Gabrieldenys.GitHub.io by Gabrieldenys</title>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-88290724-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+    <title>Eddy by Gabrieldenys</title>
   </head>
 
   <body>
-
     <header>
-      <div class="container">
-        <h1>Gabrieldenys.GitHub.io</h1>
-        <h2></h2>
-
-        <section id="downloads">
-          <a href="https://github.com/Gabrieldenys" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
+      <div class="inner">
+        <h1>Eddy</h1>
+        <h2>The M3U editor for Kodi</h2>
+        <a href="https://github.com/Gabrieldenys/Eddy" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
-    <div class="container">
-      <section id="main_content">
-        <h3>
-<a id="about" class="anchor" href="#about" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About.</h3>
+    <div id="content-wrapper">
+      <div class="inner clearfix">
+        <section id="main-content">
+          <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>M3U editor for your IPTV needs</h3>
 
-<p>Hello, This site is under construction, it will contain my projects and information about me.
-I will be showcasing my work quite soon. So please wait.</p>
+<p>Eddy was made out of necessity, it started off as a personal project to suit my needs, but then I realised I should share it with other. Because irt was only suited to my needs it is probably buggy but I hope it works for you!  </p>
 
-<p>If you are looking for my new improved "Kodi IPTV M3U Editor" then visit this <a href="https://gabrieldenys.github.io/Eddy/">link</a></p>
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h3>
 
-<p>Thanks for your patience</p>
-      </section>
+<p>
+&bull; Quick loading of channels<br />
+&bull; Edit URL<br />
+&bull; Edit channel name<br />
+&bull; Edit channel logo<br />
+&bull; Sorting by categories alphabetically<br />
+&bull; Test stream in app
+</p>
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+
+<p>The format of your M3U list should look like as follows<br><code>#EXTM3U<br><br>
+
+#EXTINF:0, tvg-id="New EPG" tvg-logo="New Logo" tvg-name="New Channel" group-title="New Group",New Channel<br>
+http://123.456.789<br></code> <br>Dont worry! Nearly all M3U lists available online are in this format </p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h3>
+
+<p>The source code of this software is MIT licensed, the full license(incl. attributions) for this software is available <a href="license.txt">here</a></p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Want to know what's what? check out the <a href="documentation.html">documentation</a> and see for yourself</p>
+        </section>
+
+        <aside id="sidebar">
+          <a href="https://github.com/Gabrieldenys/Eddy/zipball/master" class="button">
+            <small>Download</small>
+            .zip file
+          </a>
+
+
+          <p class="repo-owner"><a href="https://github.com/Gabrieldenys/Eddy"></a> is maintained by <a href="https://github.com/Gabrieldenys">Gabrieldenys</a>.</p>
+
+
+        </aside>
+      </div>
     </div>
 
-    
+
   </body>
 </html>
