--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       ga('send', 'pageview');
 
     </script>
+    <script data-cfasync='false' type='text/javascript' src='//p183854.clksite.com/adServe/banners?tid=183854_333287_0'></script>
     <title>Eddy by Gabrieldenys</title>
   </head>
 
