--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@ http://123.456.789<br></code> <br>Dont worry! Nearly all M3U lists available onl
         </section>
 
         <aside id="sidebar">
+          <p class="repo-owner"><a href="https://github.com/Gabrieldenys/Eddy"></a> is maintained by <a href="https://github.com/Gabrieldenys">Gabrieldenys</a>.</p>
+          <script type="text/javascript">
+            ( function() {
+              if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
+              var unit = {"calltype":"async[2]","publisher":"gabedenys","width":550,"height":250,"sid":"Chitika Default"};
+              var placement_id = window.CHITIKA.units.length;
+              window.CHITIKA.units.push(unit);
+              document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
+          }());
+          </script>
+          <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
           <a href="https://github.com/Gabrieldenys/Eddy/zipball/master" class="button">
             <small>Download</small>
             .zip file
