--- a/index.html
+++ b/index.html
@@ -77,10 +77,13 @@ http://123.456.789<br></code> <br>Dont worry! Nearly all M3U lists available onl
         <aside id="sidebar">
           <p class="repo-owner"><a href="https://github.com/Gabrieldenys/Eddy"></a> is maintained by <a href="https://github.com/Gabrieldenys">Gabrieldenys</a>.</p>
 
-          <a href="https://github.com/Gabrieldenys/Eddy/zipball/master" class="button">
-            <small>Download</small>
-            .zip file
-          </a>
+
+
+          <div class="button">
+              <a href="#">Download</a>
+              <p class="top">click to begin</p>
+              <p class="bottom">1.2MB .zip</p>
+            </div>
           <script type="text/javascript">
   ( function() {
     if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
