--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
           <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>M3U editor for your IPTV needs</h3>
 
-<p>Eddy was made out of necessity, it started off as a personal project to suit my needs, but then I realised I should share it with other. Because irt was only suited to my needs it is probably buggy but I hope it works for you!  </p>
+<p>Eddy was made out of necessity, it started off as a personal project to suit my needs, but then I realised I should share it with others.Due to the fact it was only suited to my needs it may bebuggy but I hope it works for you!
+It should run fine on windowds 10 without VLC dependencies   </p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h3>
