--- a/index.html
+++ b/index.html
@@ -82,20 +82,13 @@ http://123.456.789<br></code> <br>Dont worry! Nearly all M3U lists available onl
             <small>Download Eddy</small>
             .zip file
           </a>
-          <script type="text/javascript">
-  ( function() {
-    if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
-    var unit = {"calltype":"async[2]","publisher":"gabedenys","width":300,"height":250,"sid":"Chitika Default"};
-    var placement_id = window.CHITIKA.units.length;
-    window.CHITIKA.units.push(unit);
-    document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
-}());
-</script>
-<script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
+
         </aside>
       </div>
     </div>
 
-
+<script data-cfasync='false' type='text/javascript' src='//p183854.clksite.com/adServe/banners?tid=183854_333287_3&type=footer&size=728x90'></script>
+<script data-cfasync='false' type='text/javascript' src='//p183854.clksite.com/adServe/banners?tid=183854_333287_4&type=slider&size=800x440&animate=off'></script>
   </body>
+
 </html>
