--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>M3U editor for your IPTV needs</h3>
 
 <p>Eddy was made out of necessity, it started off as a personal project to suit my needs, but then I realised I should share it with others.Due to the fact it was only suited to my needs it may bebuggy but I hope it works for you!
-It should run fine on windows 10 without any VLC dependencies   </p>
+It runs smoothly on most Windows versions(incl. Windows 10) without any VLC dependencies !  </p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h3>
@@ -76,7 +76,7 @@ http://123.456.789<br></code> <br>Dont worry! Nearly all M3U lists available onl
         </section>
 
         <aside id="sidebar">
-          <p class="repo-owner"><a href="https://github.com/Gabrieldenys/Eddy"></a> is maintained by <a href="https://github.com/Gabrieldenys">Gabrieldenys</a>.</p>
+          <p class="repo-owner"><a href="https://github.com/Gabrieldenys/Eddy"></a> is maintained by <a href="https://github.com/Gabrieldenys">Gabrieldenys</a>.<br> Make sure you view this website on desktop to see the download link!</p>
 
           <a href="https://github.com/Gabrieldenys/Eddy/zipball/master" class="button">
             <small>Download Eddy</small>
